Fixed Git indexing issues by excluding vendor/
