# app/Http/Requests/GuessCreateRequest.php
@@ -8,7 +8,7 @@ use Illuminate\Foundation\Http\FormRequest;
  * @OA\Schema(
  *     schema="GuessCreateRequest",
  *     type="object",
- *     required={"latitude", "longitude", "error_distance", "user_id", "location_id"},
+ *     required={"latitude", "longitude"},
  *     @OA\Property(
  *         property="latitude",
  *         type="number",
@@ -22,23 +22,7 @@ use Illuminate\Foundation\Http\FormRequest;
  *         format="float",
  *         description="Guess longitude with exactly 5 decimal points",
  *         example=-122.41942
- *     ),
- *     @OA\Property(
- *         property="error_distance",
- *         type="number",
- *         format="float",
- *         description="Error distance between guess and actual location"
- *     ),
- *     @OA\Property(
- *         property="user_id",
- *         type="integer",
- *         description="ID of the user making the guess"
- *     ),
- *     @OA\Property(
- *         property="location_id",
- *         type="integer",
- *         description="ID of the location being guessed"
- *     ),
+ *     )
  * )
  */
 class GuessCreateRequest extends FormRequest
@@ -59,16 +43,13 @@ class GuessCreateRequest extends FormRequest
      *
      * @return array
      */
-     public function rules()
-     {
-         return [
-             'latitude' => ['required', 'numeric', 'regex:/^-?\d+(\.\d{5})$/'],
-             'longitude' => ['required', 'numeric', 'regex:/^-?\d+(\.\d{5})$/'],
-             'error_distance' => 'required|numeric',
-             'user_id' => 'required|integer|exists:users,id',
-             'location_id' => 'required|integer|exists:locations,id',
-         ];
-     }
+    public function rules()
+{
+    return [
+        'latitude' => 'required|numeric', 
+        'longitude' => 'required|numeric',
+    ];
+}
 
      /**
       * Get custom error messages for validator errors.
