# routes/api.php
@@ -9,11 +9,8 @@ use App\Http\Controllers\UserActionController;
 use App\Http\Controllers\UpdatePasswordController;
 use App\Http\Controllers\UpdateUserController;
 use Illuminate\Support\Facades\Route;
-use Laravel\Passport\Http\Controllers\AccessTokenController;
-use Laravel\Passport\Http\Controllers\AuthorizationController;
-use Laravel\Passport\Http\Controllers\PersonalAccessTokenController;
-use Laravel\Passport\Http\Controllers\ClientController;
-use Laravel\Passport\Http\Controllers\ScopeController;
+use App\Http\Controllers\AuthController;
+
 
 /*
 |--------------------------------------------------------------------------
@@ -29,15 +26,15 @@ use Laravel\Passport\Http\Controllers\ScopeController;
 Route::post('/register', [RegisterController::class, 'register']);
 Route::post('/login', [LoginController::class, 'login']);
 
-Route::post('/oauth/token', [AccessTokenController::class, 'issueToken'])->middleware('throttle');
+Route::get('auth/google', [AuthController::class, 'redirectToGoogle']);
+Route::get('auth/google/callback', [AuthController::class, 'handleGoogleCallback']);
 
 Route::middleware(['auth:api'])->group(function () {
 
     // Location Routes
-    Route::apiResource('locations', LocationController::class);
+ 
     Route::get('/location/random', [LocationController::class, 'random']);
-    Route::get('/users/{user_id}/locations', [LocationController::class, 'getLocationsByUserId'])
-        ->name('users.locations');
+
 
     // Profile Routes
     Route::get('profile', [ProfileController::class, 'show']);
@@ -46,20 +43,20 @@ Route::middleware(['auth:api'])->group(function () {
     // User Update Routes
     Route::put('/update', [UpdateUserController::class, 'update']);
     Route::put('/update-password', [UpdatePasswordController::class, 'updatePassword']);
-    Route::post('/users/{id}/add-points', [UpdateUserController::class, 'addPoints'])
-        ->middleware(['can:addPoints,App\Models\User']); // Extra authorization
+    Route::post('/users/{id}/add-points', [UpdateUserController::class, 'addPoints'])->where('id', '[0-9]+');
     Route::post('/update-profile-picture', [UpdateUserController::class, 'updateProfilePicture']);
 
+    Route::get('/locations', [LocationController::class, 'index']); // Get all locations
+    Route::get('/locations/me', [LocationController::class, 'getLocationsForCurrentUser']); // Get all locations for the current user
+    Route::get('/locations/{id}', [LocationController::class, 'show']); // Get a single location
 
     // Guess Routes
     Route::get('/guesses/best', [GuessController::class, 'getBestGuesses']);
     Route::get('/guesses/{id}', [GuessController::class, 'getBestGuessesByLocation']);
+    Route::post('/locations/guess/{id}', [GuessController::class, 'guessLocation']);
 
     // User Action Logging Routes
     Route::post('user-actions', [UserActionController::class, 'store']); // Log user actions
-
-    // Admin Routes (Restrict access to admins)
-    Route::middleware('can:viewActions')->group(function () {
-        Route::get('admin/user-actions', [UserActionController::class, 'recent']); // View last 100 actions
-    });
+    Route::get('admin/user-actions', [UserActionController::class, 'recent']); // View last 100 actions
+   
 });
